# bralltog

./: .gitignore  CMakeLists.txt  bralltog.c  build-game-lib-automatically.sh  compile-debug.sh  game.c  game.h  main.c  readme.md  todo
useful-scripts/: build-game-lib-automatically.sh  remake-targets-automatically.sh
